# HolyC-Compiler-Windows

./: CMakeLists.txt  LICENSE  README.md  build.bat  hcc.sln  hcc.vcxproj  installer.iss
src/: codegen.c  grammar.c  holyc.h  holyc_lib.c  lexer.c  main.c  parser.c
test/: build_test.bat  test.hc
